# portfolio

./: .gitignore  Cargo.toml  README.md  fun.html  index.html  portfolio.d.ts  portfolio.js  portfolio_bg.wasm  portfolio_bg.wasm.d.ts  style.css
.github/workflows/: gh-pages.yml
assets/: Arm.glb  Room1.glb
bevy-scene-hook/: Cargo.toml  Readme.md
bevy-scene-hook/examples/: simple_scene.rs
bevy-scene-hook/src/: reload.rs
js/: game.js  karplusStrong.js
pkg/: README.md  portfolio.d.ts  portfolio.js  portfolio_bg.wasm.d.ts
src/: game.rs  granular.rs  karplus_strong.rs  lib.rs  random.rs
src/game/: camera.rs  combat_manager.rs  enemy.rs  file_system_interaction.rs  mod.rs  player.rs  scene.rs
src/granular/: circular_buffer.rs
www/: fun.html  game.html  granular.js  index.html  index.js  karplusStrong.js  portfolio.d.ts  portfolio.js  portfolio_bg.wasm  portfolio_bg.wasm.d.ts  style.css
www/assets/: Enemy.glb  Room1.glb  Room1_backup.glb
www/js/: game.js  granular.js  index.js  karplusStrong.js
www/style/: style.css
