[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[profile.dev] 
incremental = true
opt-level = 0

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.14.2" }
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
web-sys = "0.3.72"
bevy-scene-hook = { path = "/home/tobias/bevy-scene-hook" }

[target.x86_64-pc-windows-gnu]
linker = "lld"

