[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[profile.dev] 
incremental = true
opt-level = 0

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.14.2" }
wasm-bindgen = "0.2.95"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
web-sys = "0.3.72"
bevy-scene-hook = { path = "/home/runner/work/portfolio/portfolio/bevy-scene-hook" }
bevy-tnua = "0.19.0"
bevy-tnua-rapier3d = "0.7.0"
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking", "standard_dynamic_assets"] }
bevy_rapier3d = "0.27.0"
iyes_progress = "0.12.0"
nalgebra = "0.33.2"

[target.x86_64-pc-windows-gnu]
linker = "lld"

